# ros2_control

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/bbot_description/share/bbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bbot_description/share/bbot_description/cmake/: bbot_descriptionConfig-version.cmake  bbot_descriptionConfig.cmake
install/bbot_description/share/bbot_description/environment/: ament_prefix_path.dsv  path.dsv
install/bbot_description/share/bbot_description/launch/: bbot.launch.py  bbot_gazebo.launch.py
install/bbot_description/share/bbot_description/urdf/: arm.xacro  bbot.urdf.xacro  bbot_description.xacro  common_properties.xacro  inertial_macros.xacro  ros2_control.xacro
install/dxl_test/lib/dxl_test/: test_motors
install/dxl_test/share/dxl_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dxl_test/share/dxl_test/cmake/: dxl_testConfig-version.cmake  dxl_testConfig.cmake
install/dxl_test/share/dxl_test/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/cmake/: my_robot_bringupConfig-version.cmake  my_robot_bringupConfig.cmake
install/my_robot_bringup/share/my_robot_bringup/config/: my_robot_controllers.yaml
install/my_robot_bringup/share/my_robot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_hardware/share/my_robot_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  my_robot_hardware_interface.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/dxl_test/: CMakeLists.txt
src/dxl_test/include/dxl_test/: xl330_driver.hpp
src/dxl_test/src/: test_motors.cpp
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: my_robot_controllers.yaml
src/my_robot_bringup/launch/: my_robot.launch copy.py  my_robot.launch.py
src/my_robot_controllers/: CMakeLists.txt  my_controller_plugin.xml  package.xml
src/my_robot_controllers/include/my_robot_controllers/: my_controller.hpp
src/my_robot_controllers/src/: my_controller.cpp
src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
src/my_robot_hardware/include/my_robot_hardware/: mobile_base_hardware_interface.hpp
src/my_robot_hardware/src/: mobile_base_hardware_interface.cpp
(+27 files in other folders)
